Added CreatePost and GetPosts implementation in the Controllers.
